# homework

AI-Puzzle-Problem/: Input2.txt  Input3.txt  Input4.txt  Output1.txt  main.cpp  out1  out2  out3  out4
APS-18Fall-HW/: .gitignore
APS-18Fall-HW/customized/A/: Main.java
APS-18Fall-HW/customized/B/: Main.java
APS-18Fall-HW/customized/C/: Main.java
APS-18Fall-HW/customized/D/: Main.java
APS-18Fall-HW/quiz1/: in
WSE-Project/: .gitignore  README.md
Web-Search-Engine-HW1/: .gitignore  explain.txt  main.py  my_bfs_crawl.py  my_crawl.py  my_focused_crawl.py  page_and_url.py  readme.txt  relevance_strategy.py  util.py
Web-Search-Engine-HW2-Build-Index/: .gitignore  README.md
Web-Search-Engine-HW2-Build-Index/extract/: download.py  extract_text.py
Web-Search-Engine-HW2-Build-Index/src/: build.sh  build_index.cpp  helper.cpp  helper.h  makefile  merge.cpp  merge.sh  test.cpp  test.sh  testall.sh
Web-Search-Engine-HW3/: .gitignore  CMakeLists.txt  README.md  build_index.cpp  helper.cpp  helper.h  main.cpp  merge.cpp
Web-Search-Engine-HW3/extract/: extract_text.py
Web-Search-Engine-HW3/frontend/: package-lock.json  package.json
Web-Search-Engine-HW3/frontend/server/: package.json  server.js
Web-Search-Engine-HW3/frontend/src/app/: Doc.ts  app.component.html  app.component.ts  app.module.ts  search.service.ts
big-data-assignment/assignment2/: task1-sql.py  task1.py  task2-sql.py  task2.py  task3-sql.py  task3.py  task4-sql.py  task4.py  task5-sql.py  task5.py  task6-sql.py  task6.py  task7-sql.py  task7.py
big-data-assignment/lab8/: modifiedoutput.txt
(+114 files in other folders)
